--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "build": "vite build --watch",
+        "dev": "vite",
+        "dev:host": "vite --host"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
