--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+APP_WHATSAPP_NUMBER=0000000000000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
