--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_WHATSAPP_NUMBER=0000000000000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=ar
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
