--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.32",
+        "sass-embedded": "^1.85.0",
         "tailwindcss": "^3.4.0",
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "daisyui": "^4.12.23"
+        "daisyui": "^4.12.23",
+        "quill": "^2.0.3"
     }
 }
