--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "chart.js": "^4.4.8",
         "daisyui": "^4.12.23",
         "quill": "^2.0.3"
     }
